--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "dist"
   ],
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.js"
+  },
   "scripts": {
-    "dev": "tsc -p . -w --incremental",
-    "build": "rimraf dist && run-s build-bundle build-types",
-    "build-bundle": "esbuild src/index.ts --bundle --platform=node --target=node12 --outfile=dist/index.js",
-    "build-types": "tsc -p . --emitDeclarationOnly --outDir temp && api-extractor run && rimraf temp",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --commit-path . --lerna-package plugin-vue",
-    "release": "node ../../scripts/release.js"
+    "build": "tsup src/index.ts --format cjs,esm --dts"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -29,6 +29,12 @@
   "homepage": "https://github.com/TheDutchCoder/vite-plugin-add-scripts#readme",
   "devDependencies": {
     "rollup": "^2.38.5",
+    "tsup": "^4.10.1",
+    "typescript": "^4.2.4",
     "vite": "^2.2.4"
-  }
+  },
+  "description": "A Vite plugin to add custom scripts to the index.html file",
+  "keywords": [
+    "vite"
+  ]
 }
