--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "require": "./dist/index.js"
   },
   "scripts": {
+    "test": "echo \"No test specified\"",
     "build": "tsup src/index.ts --format cjs,esm --dts"
   },
   "engines": {
