--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "require": "./dist/index.js"
   },
   "scripts": {
-    "test": "echo \"No test specified\"",
-    "build": "tsup src/index.ts --format cjs,esm --dts"
+    "test": "tsup src/index.ts --format cjs,esm --dts"
   },
   "engines": {
     "node": ">=12.0.0"
