--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "require": "./dist/index.js"
   },
   "scripts": {
-    "test": "tsup src/index.ts --format cjs,esm --dts"
+    "test": "test:unit && tsup src/index.ts --format cjs,esm --dts",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watch"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -28,7 +30,10 @@
   },
   "homepage": "https://github.com/TheDutchCoder/vite-plugin-add-scripts#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "jest": "^26.6.3",
     "rollup": "^2.38.5",
+    "ts-jest": "^26.5.6",
     "tsup": "^4.10.1",
     "typescript": "^4.2.4",
     "vite": "^2.2.4"
