--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "require": "./dist/index.js"
   },
   "scripts": {
-    "test": "test:unit && tsup src/index.ts --format cjs,esm --dts",
+    "test": "npm run test:unit && tsup src/index.ts --format cjs,esm --dts",
     "test:unit": "jest",
     "test:unit:watch": "jest --watch"
   },
